<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>afv_costmap</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="suke@todo.todo">suke</maintainer>
  <license>TODO: License declaration</license>

   <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>grid_map_cmake_helpers</build_depend>

  <depend>ament_cmake_auto</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>grid_map</depend>
  <depend>grid_map_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen</depend>
  <!-- <depend>libpcl-all-dev</depend> -->
  <depend>data_buffer</depend>
  <depend>pcl_apps_msgs</depend>
  <depend>quaternion_operation</depend>
  <depend>geometry_msgs_data_buffer</depend>
  <depend>filters</depend>
  <depend>tf2_geometry_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>